--- a/projects/MonkVG-Windows/MonkVG.vcxproj
+++ b/projects/MonkVG-Windows/MonkVG.vcxproj
@@ -54,7 +54,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>../../include;../../src;../../src/opengl;./glew/include;../../thirdparty/gles2-bc/Sources/OpenGLES;../../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES11;../../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES20;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;OPENVG_DLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;OPENVG_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -63,7 +63,7 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>glue32.lib;opengl32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glu32.lib;opengl32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>./glew/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -75,7 +75,7 @@
       <Optimization>MaxSpeed</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>../../include;../../src;../../src/opengl;./glew/include;../../thirdparty/gles2-bc/Sources/OpenGLES;../../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES11;../../thirdparty/gles2-bc/Sources/OpenGLES/OpenGLES20;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;OPENVG_DLL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;OPENVG_DLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PrecompiledHeader />
@@ -83,7 +83,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>glue32.lib;opengl32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glu32.lib;opengl32.lib;glew32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>./glew/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -109,6 +109,24 @@
     <ClCompile Include="..\..\src\opengl\glImage.cpp" />
     <ClCompile Include="..\..\src\opengl\glPaint.cpp" />
     <ClCompile Include="..\..\src\opengl\glPath.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.cpp" />
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\mkBaseObject.h" />
@@ -131,6 +149,72 @@
     <ClInclude Include="..\..\src\opengl\glPaint.h" />
     <ClInclude Include="..\..\src\opengl\glPath.h" />
     <ClInclude Include="..\..\src\opengl\glPlatform.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\all_shaders.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\alphaTest.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\fog.glsl.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerVertex.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.frag.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.vert.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESMath.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESPlatform.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.h" />
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\alphaTest.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\fog.glsl" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerVertex.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.frag" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.vert" />
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\update" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
