--- a/projects/MonkVG-Windows/MonkVG.vcxproj.filters
+++ b/projects/MonkVG-Windows/MonkVG.vcxproj.filters
@@ -22,6 +22,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="Source Files\OpenGLES">
+      <UniqueIdentifier>{6f97b258-52fe-40e1-877f-56a8969c5d66}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\OpenGLES\OpenGLES11">
+      <UniqueIdentifier>{27ea18ef-91e8-4ba9-bf23-a7f641df1644}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\OpenGLES\OpenGLES20">
+      <UniqueIdentifier>{2f1b93c8-983c-498b-ba80-2a5433cb2a9e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\OpenGLES\OpenGLES20\shaders">
+      <UniqueIdentifier>{98ff41f6-12ff-407a-9e56-3828e7f729ff}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\mkBaseObject.cpp">
@@ -71,6 +83,60 @@
     </ClCompile>
     <ClCompile Include="..\..\src\opengl\glPath.cpp">
       <Filter>Source Files\opengl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.cpp">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.cpp">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.cpp">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.cpp">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.cpp">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.cpp">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES11</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES11</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.cpp">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -134,5 +200,199 @@
     <ClInclude Include="..\..\src\opengl\glPlatform.h">
       <Filter>Header Files\opengl</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESConfig.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESContext.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESFile.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESImplementation.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESMath.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESPlatform.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESString.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLESUtil.h">
+      <Filter>Source Files\OpenGLES</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Context.h">
+      <Filter>Source Files\OpenGLES\OpenGLES11</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES11\OpenGLES11Implementation.h">
+      <Filter>Source Files\OpenGLES\OpenGLES11</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Attribute.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\MatrixStack.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Context.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLES20Implementation.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\OpenGLESState.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Shader.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderFile.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderProgram.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\ShaderSource.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\Uniform.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\all_shaders.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\alphaTest.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\fog.glsl.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerVertex.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.frag.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.vert.h">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\alphaTest.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\clipPlane.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\fog.glsl">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lighting.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerFragment.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\lightingPerVertex.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\main.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\postprocess.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture0.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture1.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.frag">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\texture2.vert">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
+    <None Include="..\..\thirdparty\gles2-bc\Sources\OpenGLES\OpenGLES20\shaders\update">
+      <Filter>Source Files\OpenGLES\OpenGLES20\shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
