--- a/projects/MonkVG-Windows/MonkVG.vcxproj.filters
+++ b/projects/MonkVG-Windows/MonkVG.vcxproj.filters
@@ -194,18 +194,6 @@
     <ClInclude Include="..\..\src\mkPath.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\VG\openvg.h">
-      <Filter>Header Files\VG</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\VG\vgext.h">
-      <Filter>Header Files\VG</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\VG\vgplatform.h">
-      <Filter>Header Files\VG</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\include\VG\vgu.h">
-      <Filter>Header Files\VG</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\opengl\glBatch.h">
       <Filter>Header Files\opengl</Filter>
     </ClInclude>
@@ -382,6 +370,18 @@
     </ClInclude>
     <ClInclude Include="..\..\include\MonkVG\KHR\khrplatform.h">
       <Filter>Header Files\KHR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\MonkVG\openvg.h">
+      <Filter>Header Files\VG</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\MonkVG\vgext.h">
+      <Filter>Header Files\VG</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\MonkVG\vgplatform.h">
+      <Filter>Header Files\VG</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\MonkVG\vgu.h">
+      <Filter>Header Files\VG</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
